--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: https://necisam-blog.herokuapp.com
+url: http://king4sam.github.io
 title: Necisam's blog
 subtitle: Ruby starter
 author: Necisam
